Feature/debug rover controller (#7)
* create testcontainer hook

* Fix tests

* Add integration test

* Add the proper low-latency GC